--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,12 +5,14 @@ phases:
     commands:
       - echo Entered the pre_build phase...
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $REGISTRY/$REPOSITORY
+      - 
   build:
     commands:
-      - docker build -t $REPOSITORY .
+      - docker build -t $REPOSITORY:$CODEBUILD_SOURCE_VERSION .
       - docker tag $REPOSITORY:$CODEBUILD_SOURCE_VERSION $REGISTRY/$REPOSITORY:$CODEBUILD_SOURCE_VERSION
-      - docker push $REGISTRY/$REPOSITORY:$CODEBUILD_SOURCE_VERSION
   post_build:
     commands:
       - echo Entered the post_build phase...
       - echo Build completed on `date`
+      - echo Pushing the Docker image to ECR...
+      - docker push $REGISTRY/$REPOSITORY:$CODEBUILD_SOURCE_VERSION
