--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   pre_build:
     commands:
       - echo Entered the pre_build phase...
-      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $REGISTRY/$REPOSITORY
+      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $REGISTRY
       - 
   build:
     commands:
